feat: Integrate with mandatory request
